manifest/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: image-validation-controller
  labels:
    app: image-validation-controller
spec:
  selector:
    app: image-validation-controller
  ports:
    - protocol: TCP
      port: 443         
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-validation-controller
  labels:
    app: image-validation-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-validation-controller
  template:
    metadata:
      labels:
        app: image-validation-controller
    spec:
      serviceAccountName: image-validation-controller
      containers:
        - name: image-validation-controller
          image: sagar27/imageadmissionwebhook:1
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          volumeMounts:
            - name: tls-certs
              mountPath: /ImageAdmissionWebhook/tls
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: simple-kubernetes-webhook-tls
