manifest/localValidation.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: deployment-validation
webhooks:
  - name: "image-validation-controller.default.svc"
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "deployments" ]
        scope: "Namespaced"
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        resources: [ "pods" ]
        scope: "Namespaced"
    clientConfig:
      # url: "https://image-validation-controller.default.svc/validate"
      service:
        namespace: default
        name: image-validation-controller
        path: "/validate"
        port: 443
      caBundle: >
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURsVENDQW4yZ0F3SUJBZ0lVSlpCZGJuRDlBdU1aL3BSQmxpUmd5RWRzVHJJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1B6RUxNQWtHQTFVRUJoTUNRVlV4TURBdUJnTlZCQU1NSjJsdFlXZGxMWFpoYkdsa1lYUnBiMjR0WTI5dQpkSEp2Ykd4bGNpNWtaV1poZFd4MExuTjJZekFlRncweU5UQTJNekF3TmpJeU1qVmFGdzB5TmpBMk16QXdOakl5Ck1qVmFNRDh4Q3pBSkJnTlZCQVlUQWtGVk1UQXdMZ1lEVlFRRERDZHBiV0ZuWlMxMllXeHBaR0YwYVc5dUxXTnYKYm5SeWIyeHNaWEl1WkdWbVlYVnNkQzV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFSwpBb0lCQVFDellSdGN1cHdm [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
