manifest/validateWebhookCOnfiguration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: deployment-validation
webhooks:
  - name: "image-validation-controller.default.svc"
    # namespaceSelector:
    #   matchLabels:
    #     admission-webhook: enabled
    #   matchExpressions:
    #     - key: kubernetes.io/metadata.name
    #       operator: In
    #       values: [ "default" ]
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [ "apps" ]
        apiVersions: [ "v1" ]
        resources: [ "deployments" ]
        scope: "Namespaced"
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        resources: [ "pods" ]
        scope: "Namespaced"
    clientConfig:
      service:
        namespace: default
        name: image-validation-controller
        path: "/validate"
      caBundle: >
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVZStEWHozSUVDdndMWXNjVUZqdzcwQjMzaStBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tkMlZpYUc5dmF5MWpZVEFlRncweU5UQTJNamt3T0RVME1qQmFGdzB5TmpBMgpNamt3T0RVME1qQmFNQlV4RXpBUkJnTlZCQU1NQ25kbFltaHZiMnN0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFETGJjNGJzUStFcFhxY2sweCt4ZGp5SDlZZTdrSVp1R1FiZzNPbkRSRncKdTFTWTNWeGp5WkRhSklteUxhZkZGQzdySUJKZnNiUFlBUWc0bm5hSldZNHhCbnZnZ041Q3BmZzFTSGVlNGs5WQpqZ1l4cDlwU3diQVJGakZB [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
